--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,11 @@ header{
     font-size: 10vw;
 }
 
+.detail h2 {
+    font-size: 6vw;
+    margin-top: 100px;
+}
+
 .detail > video {
     width: 50%;
     margin: 50px auto;
